refactor: removed redundant variable and replace get(0) with getFirst() in GameBoard